--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/doctor_icon_vMj_icon.ico">
+  <meta name="description" content="Hello, I'm Tiffany Trinh and currently major in Biochemistry as a second year at UC Riverside.">
+  <meta name="author" content="862209474">
 
-  <title>John Doe - Business Administration</title>
+  <title>Tiffany Trinh - Biochemistry</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Tiffany Trinh</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/TiffanyTrinh.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Tiffany Trinh
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Biochemistry📚</div>
+        <p class="lead mb-4">I am currently majoring in biochemistry in hopes of becoming a pediatrician in the future. In my junior year of high school, I was so excited about following the pre-med track that I decided to take an anatomy and physiology course. Through this class, I was able to learn medical terminology about the human body systems as well as its functions. To enhance my understanding, I got to dissect a variety of animals to learn about the different anatomy structures such as fish, frogs, sharks, lamb heart, and cow eye. I also gained insight into many different medical career paths which also included the type of work they do.<br><br>
 
-        Enter bio here<br><br>
+        During high school, I got to partake in a new biomedical program that allowed students like me to conduct scientific experiments to solve real life situations. For example, my teacher recreated the crime scene for us students to critically think and analyze what had happened to the victim. We were able to examine the crime scene such as the blood, fingerprint, footprint, weapon, and medication. In order to understand the events that lead to the crime, we had to learn how to perform the PCR process as well as DNA fingerprinting. Throughout this course, I was able to learn forensic science, analyze data, and develop technical skills.<br><br>
 
-        Enter bio here
+        Towards the beginning of my senior year, I also joined the Medical Assistant Clinic course to further my knowledge and skills in the healthcare field. In class, my teacher taught us how to assess a patient's vital signs. This procedure included both the traditional and modern way. I learned how to measure their pulse, blood pressure, respiration rate, and temperature. I also learned how to use the traditional scale and electronic scale to measure the height and weight of the patient. In addition, this course gave me an opportunity to learn how to take glucose level tests as well as how to withdraw blood.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.nintendo.com/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/TiffanyTrinh09">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/kyedae">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:tiffanytrinh09@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Volunteer Service for Thomas House Temporary Shelter</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.thomashouseshelter.org/">Thomas House Family Shelter</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Helped decorate the shelter for the birthday party<br> 
+              • Setted up an ice cream and slime station<br>
+              • Filled up balloons with water for a game of tag<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">April 2017 - April 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Volunteer Service for Nursery Home</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://gardenparkcarecenter.com/">Garden Park Care Center</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Sang Christmas carols to bring holiday spirit<br>
+              • Gave gifts that included hats and scarfs to the patients<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">December 2016 - December 2016</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Catechist Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.morethanschool.org/">St. Cecilia School</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Prepared Gospel reading lessons with the Catechist leaders<br>
+            • Graded tests and reviewed the answers<br>
+            • Made activities and games that were based on the lessons<br>
+            • Practiced prayers with the class<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2018 - May 2019</span>
           </div>
         </div>
 
@@ -152,33 +152,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Masters of Biochemistry</div>
+            <div>MBA in Biochemistry</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2023 - June 2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Postgraduate Certificate in Biochemistry</div>
+            <div>Immunology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">Biochemical pharmacology</div>
+            <div>Toxicology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2023 - June 2024</span>
           </div>
         </div>
 
@@ -191,7 +191,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG-4190(1).jpg" width="500px">
+            <img src="img/IMG-4191(1).jpg" width="500px"><br>
+            <img src="img/IMG-4192(1).jpg" width="500px">
+            <img src="img/IMG-4193(2).jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +202,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Tiffany Trinh</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
